// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> input should render with autoComplete 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      autoComplete="tel"
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> input should render with hidden password 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default mfui-text-field_icon mfui-text-field_password"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="password"
      value="value"
    />
    <div
      className="mfui-text-field__icon-box mfui-text-field__icon-box_password"
      onClick={[Function]}
    >
      <test-file-stub
        className="mfui-text-field__icon"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> input should render with ie placeholder 1`] = `
<TextField
  disabled={true}
  id="id"
  isControlled={false}
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={false}
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
    >
      <input
        className="mfui-text-field__field"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="mfui-text-field__wrap"
    />
  </div>
</TextField>
`;

exports[`<TextField /> input should render with inputmode 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      inputMode="numeric"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> input should render with mask 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <InputElement
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      inputRef={[Function]}
      mask="+7 (999) 999-99-99"
      maskChar="_"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> input should render with number value 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value={1234}
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> input should render with string value 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value="value"
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> input should render with type 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="tel"
      value=""
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> input should render with value after updating number prop 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={false}
  value={5678}
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
    >
      <input
        className="mfui-text-field__field"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        type="text"
        value={1234}
      />
    </div>
    <div
      className="mfui-text-field__wrap"
    />
  </div>
</TextField>
`;

exports[`<TextField /> input should render with value after updating string prop 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={false}
  value="newValue"
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
    >
      <input
        className="mfui-text-field__field"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        type="text"
        value="value"
      />
    </div>
    <div
      className="mfui-text-field__wrap"
    />
  </div>
</TextField>
`;

exports[`<TextField /> input should render with visible password 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default mfui-text-field_icon"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      type="text"
      value="value"
    />
    <div
      className="mfui-text-field__icon-box mfui-text-field__icon-box_password"
      onClick={[Function]}
    >
      <test-file-stub
        className="mfui-text-field__icon"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> input should render without ie placeholder when value is passed 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={false}
  value="value"
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
    >
      <input
        className="mfui-text-field__field"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        type="text"
        value="value"
      />
    </div>
    <div
      className="mfui-text-field__wrap"
    />
  </div>
</TextField>
`;

exports[`<TextField /> input should render without no-touch class 1`] = `
<TextField
  disabled={true}
  id="id"
  isControlled={false}
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper"
    >
      <input
        className="mfui-text-field__field"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="mfui-text-field__wrap"
    />
  </div>
</TextField>
`;

exports[`<TextField /> should render with common props 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white customClass"
>
  <InputLabel
    dataAttrs={
      Object {
        "root": undefined,
      }
    }
    htmlFor="id"
  >
    label
    <span
      className="mfui-text-field__require-mark"
    >
      *
    </span>
  </InputLabel>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__text"
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> should render with custom icon 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white mfui-text-field_icon customClass"
>
  <InputLabel
    dataAttrs={
      Object {
        "root": undefined,
      }
    }
    htmlFor="id"
  >
    label
    <span
      className="mfui-text-field__require-mark"
    >
      *
    </span>
  </InputLabel>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="text"
      value=""
    />
    <div
      className="mfui-text-field__icon-box"
      onClick={[Function]}
    >
      <test-file-stub />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__text"
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> should render with default props 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> should render with error 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white mfui-text-field_error mfui-text-field_icon customClass"
>
  <InputLabel
    dataAttrs={
      Object {
        "root": undefined,
      }
    }
    htmlFor="id"
  >
    label
    <span
      className="mfui-text-field__require-mark"
    >
      *
    </span>
  </InputLabel>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="text"
      value=""
    />
    <div
      className="mfui-text-field__icon-box mfui-text-field__icon-box_error"
      onClick={[Function]}
    >
      <test-file-stub
        className="mfui-text-field__icon"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__text mfui-text-field__text_error"
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> should render with hidden icon 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white customClass"
>
  <InputLabel
    dataAttrs={
      Object {
        "root": undefined,
      }
    }
    htmlFor="id"
  >
    label
    <span
      className="mfui-text-field__require-mark"
    >
      *
    </span>
  </InputLabel>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="text"
      value=""
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__text"
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> should render with valid 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white mfui-text-field_valid mfui-text-field_icon customClass"
>
  <InputLabel
    dataAttrs={
      Object {
        "root": undefined,
      }
    }
    htmlFor="id"
  >
    label
    <span
      className="mfui-text-field__require-mark"
    >
      *
    </span>
  </InputLabel>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <input
      className="mfui-text-field__field"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      type="text"
      value=""
    />
    <div
      className="mfui-text-field__icon-box"
      onClick={[Function]}
    >
      <test-file-stub
        className="mfui-text-field__icon"
      />
    </div>
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__text mfui-text-field__text_success"
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> textarea should render fixed textarea 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white customClass"
>
  <InputLabel
    dataAttrs={
      Object {
        "root": undefined,
      }
    }
    htmlFor="id"
  >
    label
    <span
      className="mfui-text-field__require-mark"
    >
      *
    </span>
  </InputLabel>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_fixed"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      required={true}
      style={
        Object {
          "height": "96px",
        }
      }
      value=""
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__text"
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> textarea should render flexible textarea 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white customClass"
>
  <InputLabel
    dataAttrs={
      Object {
        "root": undefined,
      }
    }
    htmlFor="id"
  >
    label
    <span
      className="mfui-text-field__require-mark"
    >
      *
    </span>
  </InputLabel>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_flexible"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      required={true}
      style={
        Object {
          "height": "96px",
        }
      }
      value=""
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__text"
    >
      noticeText
    </div>
  </div>
</div>
`;

exports[`<TextField /> textarea should render with error because of max limit is exceeded 1`] = `
<div
  className="mfui-text-field mfui-text-field_theme_white mfui-text-field_error customClass"
>
  <InputLabel
    dataAttrs={
      Object {
        "root": undefined,
      }
    }
    htmlFor="id"
  >
    label
    <span
      className="mfui-text-field__require-mark"
    >
      *
    </span>
  </InputLabel>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_fixed"
      id="id"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      required={true}
      style={
        Object {
          "height": "96px",
        }
      }
      value="123456"
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  >
    <div
      className="mfui-text-field__text"
    >
      noticeText
    </div>
    <Paragraph
      className="mfui-text-field__counter mfui-text-field__counter_error"
      hasMargin={false}
    >
      6/4
    </Paragraph>
  </div>
</div>
`;

exports[`<TextField /> textarea should render with ie placeholder 1`] = `
<TextField
  disabled={true}
  id="id"
  isControlled={false}
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={true}
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
    >
      <textarea
        className="mfui-text-field__field mfui-text-field__field_type_fixed"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        style={
          Object {
            "height": "96px",
          }
        }
        value=""
      />
    </div>
    <div
      className="mfui-text-field__wrap"
    />
  </div>
</TextField>
`;

exports[`<TextField /> textarea should render with number value 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_fixed"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      style={
        Object {
          "height": "96px",
        }
      }
      value={1234}
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> textarea should render with string value 1`] = `
<div
  className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
>
  <div
    className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
  >
    <textarea
      className="mfui-text-field__field mfui-text-field__field_type_fixed"
      disabled={true}
      id="id"
      maxLength={4}
      name="name"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyUp={[MockFunction]}
      placeholder="placeholder"
      required={true}
      style={
        Object {
          "height": "96px",
        }
      }
      value="value"
    />
  </div>
  <div
    className="mfui-text-field__wrap"
  />
</div>
`;

exports[`<TextField /> textarea should render with value after updating number prop 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={true}
  value={5678}
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
    >
      <textarea
        className="mfui-text-field__field mfui-text-field__field_type_fixed"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        style={
          Object {
            "height": "96px",
          }
        }
        value={1234}
      />
    </div>
    <div
      className="mfui-text-field__wrap"
    />
  </div>
</TextField>
`;

exports[`<TextField /> textarea should render with value after updating string prop 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={true}
  value="newValue"
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
    >
      <textarea
        className="mfui-text-field__field mfui-text-field__field_type_fixed"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        style={
          Object {
            "height": "96px",
          }
        }
        value="value"
      />
    </div>
    <div
      className="mfui-text-field__wrap"
    />
  </div>
</TextField>
`;

exports[`<TextField /> textarea should render without ie placeholder when value is passed 1`] = `
<TextField
  disabled={true}
  id="id"
  maxLength={4}
  name="name"
  onBlur={[MockFunction]}
  onFocus={[MockFunction]}
  onKeyUp={[MockFunction]}
  placeholder="placeholder"
  required={true}
  textarea={true}
  value="value"
>
  <div
    className="mfui-text-field mfui-text-field_disabled mfui-text-field_theme_default"
  >
    <div
      className="mfui-text-field__field-wrapper mfui-text-field__field-wrapper_no-touch"
    >
      <textarea
        className="mfui-text-field__field mfui-text-field__field_type_fixed"
        disabled={true}
        id="id"
        maxLength={4}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyUp={[MockFunction]}
        placeholder="placeholder"
        required={true}
        style={
          Object {
            "height": "96px",
          }
        }
        value="value"
      />
    </div>
    <div
      className="mfui-text-field__wrap"
    />
  </div>
</TextField>
`;
